add users handler (not done yet)
